# Cmake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  configure.bat  main.cpp  run.bat
Basics/: CMakeLists.txt
Libraries and Subdirectories/: main.cpp
Submodules/: .gitignore  CMakeLists.txt
include/Adder/: adder.cpp
multiple file/: CMakeLists.txt  main.cpp
